# code_basic_agentic_ai

./: config.py  content.txt  main.py  pyproject.toml  requirements.tx
config/: config.py
resources/: agent01github.2025-09-12.private-key.pem
src/: main.py
src/agents/: graph.py  utils.py
src/workflow/: main.py
